# Patterns

./: .gitignore  CMakeLists.txt  factory_method.hpp  main.cpp
